--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta content="width=device-width, initial-scale=1" name="viewport" />
 
   <head>
     <link rel="stylesheet" href="style.css">
@@ -9,32 +10,58 @@
   </head>
 
   <body>
-    <nav>
-      <a href="https://instagram.com/mxpc.ai"><img src="guestbook.gif"></a>
-
-      <a href=""><img src="guestbook.gif"></a>
-    </nav>
 
     <section class="description">
       <p>I’m Leanne, a Toronto-based independent designer specializing in branding,
         design and technology. Currently, I’m tending to my <a class="body-link" href="https://macaspac.notion.site/Digital-Garden-27dd410a563d42088989a72293aad287" target="_blank">&#127803;digital garden</a><sup>&#8599;</sup>, where I
-        explore new avenues to create and play, including 3D illustration (blender and Cinema 4D),
+        discover new ways to play, including 3D illustration (blender and Cinema 4D),
         creative coding (matter.js, p5.js, TouchDesigner), and finding my nook in the small web.
         I also spend time with <a class="body-link" href="https://wearerecess.ca" target="_blank">Recess<sup>&#8599;</sup></a></a>,
         where we focus on instilling creative confidence for people who are looking to explore
         their creativity through workshops, events, installations, film, photography, and design.</p>
 
-      <p>As much as I love my alone time building new things, I love helping others bring their ideas to life. I’m also open to collaborating with
+      <p>As much as I love my alone time exploring new things, I love helping others bring their ideas to life. I’m also open to collaborating with
         brands and startups that are looking for fun and functional ways to build and connect with their community. If any of this resonates with you,
-        feel free to reach out via email at <a href="mailto:leanne@macaspac.ca">leanne@macaspac.ca</a>.</p>
-      </section>
-      <img class="pixel-art" src="macaspac-max-pixel.gif">
+        feel free to reach out via email at <a href="mailto:leanne@macaspac.ca?subject=☕️ Let's connect">leanne@macaspac.ca</a>.</p>
+    </section>
 
-      <section class="work">
-        <h1>Work index</h1>
-        <a class="body-link" href="">Portfolio available upon request</a>
-        <div class="project project-label"><p>Project</p><p>Role</p><p>Year</p></div>
-        <div class="project"><p>MXPC.ai</p><p>Illustration</p><p>Ongoing</p></div>
+    <section class="columns">
+      <div class="work">
+        <h1>Selected clients</h1>
+        <ul>
+          <li>Disney</li>
+          <li>Marvel</li>
+          <li>Sanzo</li>
+          <li>Breathe Entertainment x CBC</li>
+          <li>United Individuals</li>
+          <li>Shopify</li>
+          <li>Tita Emmie's</li>
+          <li>Foot Locker Canada</li>
+          <li>PIQUE</li>
+          <li>Adidas</li>
+          <li>Diageo</li>
+          <li>GreatWestLife</li>
+          <li>Canjet</li>
+          <li>Deloitte</li>
+        </ul>
+      </div>
+
+      <div class="work">
+        <h1>Specialties</h1>
+        <ul>
+          <li>UX strategy</li>
+          <li>UI</li>
+          <li>Prototyping</li>
+          <li>Workshop facilitation</li>
+          <li>Website design and development</li>
+          <li>CSS animations</li>
+          <li>Webflow</li>
+          <li>Shopify Buy Button</li>
+          <li>Ecommerce</li>
+          <li>Illustration</li>
+          <li>Brand strategy</li>
+          <li>Logo + guideline design</li>
+        <!--<div class="project"><p>MXPC.ai</p><p>Illustration</p><p>Ongoing</p></div>
         <div class="project"><p>Recess Night Market 2022</p><p>Producer</p><p>Right now</p></div>
         <div class="project"><p>Optimism Cities NFTs</p><p>3D illustrator</p><p>2022</p></div>
         <div class="project"><p>Disney's Turning Red x Sanzo</p><p>Web Design</p><p>2022</p></div>
@@ -52,7 +79,20 @@
         <div class="project"><p>Canjet Vacations</p><p>Animation</p><p>2016</p></div>
         <div class="project"><p>Deloitte internal enterprise interfaces</p><p>Design</p><p>2015-2016</p></div>
         <div class="project"><p>Toronto Dribbble Meetup</p><p>Illustration</p><p>2015</p></div>
-        <div class="project"><p>Universal Hip Hop Museum</p><p>Design</p><p>2014</p></div>
-       </section>
+        <div class="project"><p>Universal Hip Hop Museum</p><p>Design</p><p>2014</p></div>-->
+     </div>
+     <div class="cta">
+       <h1>Connect</h1>
+       <ul>
+         <li><a href="https://instagram.com/mxpc.ai">📸 Instagram</a></li>
+         <li><a href="https://shop.macaspac.ca">🛍 Shop</a></li>
+         <li><a class="body-link" href="mailto:leanne@macaspac.ca?subject=Leanne Macaspac Portfolio Request">💌 Request portfolio</a></li>
+       </ul>
+     </div>
+    </section>
+
+   <img class="pixel-art" src="macaspac-max-pixel.gif">
+
+
   </body>
 </html>
