--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
 
     <section class="description">
       <p>I’m Leanne, a Toronto-based independent designer specializing in branding,
-        design and technology. Currently, I’m tending to my <a class="body-link" href="https://macaspac.notion.site/Digital-Garden-27dd410a563d42088989a72293aad287" target="_blank">&#127803;digital garden</a><sup>&#8599;</sup>, where I
-        discover new ways to play, including 3D illustration (blender and Cinema 4D),
-        creative coding (matter.js, p5.js, TouchDesigner), and finding my nook in the small web.
-        I also spend time with <a class="body-link" href="https://wearerecess.ca" target="_blank">Recess<sup>&#8599;</sup></a></a>,
-        where we focus on instilling creative confidence for people who are looking to explore
-        their creativity through workshops, events, installations, film, photography, and design.</p>
+        design and technology. Currently, I’m exploring ways to express art in technology, from creative coding libraries to
+        3D illustration, and finding my nook in the small web. I also spend
+        time with <a class="body-link" href="https://wearerecess.ca" target="_blank">Recess<sup>&#8599;</sup></a></a>,
+        where we focus on instilling creative confidence through workshops, events, installations, film, photography, and design.</p>
 
-      <p>As much as I love my alone time exploring new things, I love helping others bring their ideas to life. I’m also open to collaborating with
+      <p>As much as I love my alone time tinkering away, I love helping others bring their ideas to life. I’m always open to collaborating with
         brands and startups that are looking for fun and functional ways to build and connect with their community. If any of this resonates with you,
         feel free to reach out via email at <a href="mailto:leanne@macaspac.ca?subject=☕️ Let's connect">leanne@macaspac.ca</a>.</p>
     </section>
 
     <section class="columns">
       <div class="work">
-        <h1>Selected clients</h1>
+        <h1>Clients</h1>
         <ul>
           <li>Disney</li>
           <li>Marvel</li>
@@ -35,13 +33,13 @@
           <li>Breathe Entertainment x CBC</li>
           <li>United Individuals</li>
           <li>Shopify</li>
-          <li>Tita Emmie's</li>
-          <li>Foot Locker Canada</li>
+          <li>Tita Emmie's Restaurant</li>
           <li>PIQUE</li>
+          <li>Foot Locker Canada</li>
           <li>Adidas</li>
           <li>Diageo</li>
           <li>GreatWestLife</li>
-          <li>Canjet</li>
+          <li>Canjet Vacations</li>
           <li>Deloitte</li>
         </ul>
       </div>
@@ -50,49 +48,31 @@
         <h1>Specialties</h1>
         <ul>
           <li>UX strategy</li>
-          <li>UI</li>
+          <li>Visual design</li>
+          <li>Usability testing</li>
           <li>Prototyping</li>
           <li>Workshop facilitation</li>
           <li>Website design and development</li>
-          <li>CSS animations</li>
-          <li>Webflow</li>
+          <li>No code development (Webflow + Framer)</li>
           <li>Shopify Buy Button</li>
           <li>Ecommerce</li>
           <li>Illustration</li>
-          <li>Brand strategy</li>
-          <li>Logo + guideline design</li>
-        <!--<div class="project"><p>MXPC.ai</p><p>Illustration</p><p>Ongoing</p></div>
-        <div class="project"><p>Recess Night Market 2022</p><p>Producer</p><p>Right now</p></div>
-        <div class="project"><p>Optimism Cities NFTs</p><p>3D illustrator</p><p>2022</p></div>
-        <div class="project"><p>Disney's Turning Red x Sanzo</p><p>Web Design</p><p>2022</p></div>
-        <div class="project"><p>CBC's Lunchbox Dilemma</p><p>Web Design</p><p>2022</p></div>
-        <div class="project"><p>Marvel's Shang Chi x Sanzo</p><p>Web Design</p><p>2021</p></div>
-        <div class="project"><p>United Individuals</p><p>eCommerce</p><p>2021</p></div>
-        <div class="project"><p>Shopify Online Store Speed Report</p><p>Product Design</p><p>2020</p></div>
-        <div class="project"><p>Baby's Restaurant</p><p>Branding</p><p>2020</p></div>
-        <div class="project"><p>Foot Locker Canada AJ1</p><p>Branding</p><p>2020</p></div>
-        <div class="project"><p>Shopify Buy Button Redesign</p><p>Design</p><p>2019</p></div>
-        <div class="project"><p>Adidas Adicolor brand activation</p><p>Illustration</p><p>2019</p></div>
-        <div class="project"><p>Diageo and the future of ecommerce</p><p>Design</p><p>2017</p></div>
-        <div class="project"><p>Valentine's Day for Everyone, personal project</p><p>Development</p><p>2017</p></div>
-        <div class="project"><p>GreatWestLife </p><p>Design</p><p>2016</p></div>
-        <div class="project"><p>Canjet Vacations</p><p>Animation</p><p>2016</p></div>
-        <div class="project"><p>Deloitte internal enterprise interfaces</p><p>Design</p><p>2015-2016</p></div>
-        <div class="project"><p>Toronto Dribbble Meetup</p><p>Illustration</p><p>2015</p></div>
-        <div class="project"><p>Universal Hip Hop Museum</p><p>Design</p><p>2014</p></div>-->
+          <li>Brand design</li>
      </div>
      <div class="cta">
        <h1>Connect</h1>
        <ul>
-         <li><a href="https://instagram.com/mxpc.ai">📸 Instagram</a></li>
-         <li><a href="https://shop.macaspac.ca">🛍 Shop</a></li>
-         <li><a class="body-link" href="mailto:leanne@macaspac.ca?subject=Leanne Macaspac Portfolio Request">💌 Request portfolio</a></li>
+         <li><div class="links"><img src="img/instagram.png"> <a href="https://instagram.com/mxpc.ai" target="_blank">Instagram</a></div></li>
+         <li><div class="links"><img src="img/garden.png"> <a href="https://macaspac.notion.site/Digital-Garden-27dd410a563d42088989a72293aad287" target="_blank">Digital garden</a></div></li>
+         <li><div class="links"><img src="img/shop.png"> <a href="https://shop.macaspac.ca" target="_blank">Shop</a></div></li>
+         <li><div class="links"><img src="img/spotify.png"> <a href="https://open.spotify.com/user/12159304002?si=219ccacdddbe4e6a" target="_blank">Spotify</a></div></li>
+         <li><div class="links"><img src="img/msn.png"> <a href="mailto:leanne@macaspac.ca?subject=Leanne Macaspac Portfolio/CV Request">Request portfolio/CV</a></div></li>
        </ul>
      </div>
     </section>
+    <section></section>
 
    <img class="pixel-art" src="macaspac-max-pixel.gif">
-
 
   </body>
 </html>
