Updated content + styling

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <body>
 
     <section class="description">
-      <p>I’m Leanne, a Toronto-based independent designer specializing in branding,
-        design and technology. Currently, I’m exploring ways to express art in technology, from creative coding libraries to
-        3D illustration, and finding my nook in the small web. I also spend
-        time with <a class="body-link" href="https://wearerecess.ca" target="_blank">Recess<sup>&#8599;</sup></a></a>,
-        where we focus on instilling creative confidence through workshops, events, installations, film, photography, and design.</p>
+      <p>I’m Leanne, a Toronto-based independent designer specializing in design, branding, and technology. 
+        Having spent almost 20 years building for the internet and designing software, I'm fascinated by our relationship to technology, its ethics, and how to empower communities with it.
+        Currently, I'm exploring ways to express art in technology through creative coding libraries and 3D interactive illustrations, as well as building bespoke experiences for brands that want to make the internet fun again.
+        I also lead operations at <a class="body-link" href="https://wearerecess.ca" target="_blank">Recess<sup>&#8599;</sup></a></a>,
+        a community focused on exploring creative curiosity through workshops, events, installations, film, photography, and design.
+        </p>
 
-      <p>As much as I love my alone time tinkering away, I love helping others bring their ideas to life. I’m always open to collaborating with
+      <p>While I enjoy my alone time tinkering away, I love helping others bring their ideas to life. I’m always open to collaborating with
         brands and startups that are looking for fun and functional ways to build and connect with their community. If any of this resonates with you,
         feel free to reach out via email at <a href="mailto:leanne@macaspac.ca?subject=☕️ Let's connect">leanne@macaspac.ca</a>.</p>
     </section>
@@ -48,23 +49,22 @@
         <h1>Specialties</h1>
         <ul>
           <li>UX strategy</li>
-          <li>Visual design</li>
+          <li>UI design</li>
           <li>Usability testing</li>
           <li>Prototyping</li>
           <li>Workshop facilitation</li>
           <li>Website design and development</li>
           <li>No code development (Webflow + Framer)</li>
-          <li>Shopify Buy Button</li>
-          <li>Ecommerce</li>
+          <li>Shopify (Buy Button specialization)</li>
           <li>Illustration</li>
           <li>Brand design</li>
      </div>
      <div class="cta">
-       <h1>Connect</h1>
+       <h1>Internet footprints</h1>
        <ul>
          <li><div class="links"><img src="img/instagram.png"> <a href="https://instagram.com/mxpc.ai" target="_blank">Instagram</a></div></li>
          <li><div class="links"><img src="img/garden.png"> <a href="https://macaspac.notion.site/Digital-Garden-27dd410a563d42088989a72293aad287" target="_blank">Digital garden</a></div></li>
-         <li><div class="links"><img src="img/shop.png"> <a href="https://shop.macaspac.ca" target="_blank">Shop</a></div></li>
+         <li><div class="links"><img src="img/shop.png"> <a>Shop</a><span class="citation">under construction</span></div></li>
          <li><div class="links"><img src="img/spotify.png"> <a href="https://open.spotify.com/user/12159304002?si=219ccacdddbe4e6a" target="_blank">Spotify</a></div></li>
          <li><div class="links"><img src="img/msn.png"> <a href="mailto:leanne@macaspac.ca?subject=Leanne Macaspac Portfolio/CV Request">Request portfolio/CV</a></div></li>
        </ul>
