--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta charset="UTF-8">
+  <meta name="description" content="Toronto-based independent designer building bespoke digital experiences for brands that want to make the internet fun again.">
+  <meta name="keywords" content="HTML, CSS, JavaScript, 3d, illustrations, shopify, buy button, animation">
+  <meta name="author" content="Leanne Macaspac">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 
   <head>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne+Tactile&family=Syne:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   </head>
 
   <body>
@@ -72,7 +77,7 @@
     </section>
     <section></section>
 
-   <img class="pixel-art" src="macaspac-max-pixel.gif">
+   <img class="pixel-art" src="img/macaspac-max-pixel.gif">
 
   </body>
 </html>
