--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne+Tactile&family=Syne:wght@400;700&display=swap" rel="stylesheet">
+    <title>Leanne Macaspac, independent designer</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   </head>
 
