--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne+Tactile&family=Syne:wght@400;700&display=swap" rel="stylesheet">
     <title>Leanne Macaspac, independent designer</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
   </head>
 
   <body>
