--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
      <div class="cta">
        <h1>Internet footprints</h1>
        <ul>
-         <li><div class="links"><img src="img/instagram.png"> <a href="https://instagram.com/mxpc.ai" target="_blank">Instagram</a></div></li>
+         <li><div class="links"><img src="img/instagram.png"> <a href="https://instagram.com/mxpc.art" target="_blank">Instagram</a></div></li>
          <li><div class="links"><img src="img/garden.png"> <a href="https://macaspac.notion.site/Digital-Garden-27dd410a563d42088989a72293aad287" target="_blank">Digital garden</a></div></li>
          <li><div class="links"><img src="img/shop.png"> <a>Shop</a><span class="citation">under construction</span></div></li>
          <li><div class="links"><img src="img/spotify.png"> <a href="https://open.spotify.com/user/12159304002?si=219ccacdddbe4e6a" target="_blank">Spotify</a></div></li>
